# movies_api

./: .env.example  .env.local  .gitignore  Dockerfile  Makefile  README.md  docker-compose.tests.yml  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
app/: main.py
app/api/v1/: __init__.py  dependencies.py  exceptions.py  films.py  genres.py  persons.py  request_models.py
app/api/v1/response_models/: __init__.py  film.py  genre.py  person.py  (+1 more)
app/core/: config.py  enums.py  logging_setup.py
app/db/: clients.py
app/services/: base.py  film.py  genre.py  person.py  schemas.py
elastic/: Dockerfile  entrypoint.sh
elastic/es_dump/: index-0
post-process/: load_elastic_index.sh
src/: main.py
src/adapters/: repository.py
src/api/: utils.py
src/api/v1/: dependencies.py  films.py  genres.py  models.py  persons.py  schemas.py  utils.py
src/core/: config.py  logger.py  site.conf
src/db/: elastic.py  redis.py  repository.py
src/models/: __init__.py  base.py  film.py  genre.py  person.py  responses.py
src/services/: base.py  film.py  genre.py  person.py  schemas.py
tests/functional/: .dockerignore  .env.example  .env.tests-local  Dockerfile  Makefile  conftest.py  docker-compose-dev.yml  docker-compose.yml  pytest.ini  requirements.txt  settings.py
tests/functional/elastic/: schema_mapping.py
tests/functional/elasticsearch_indexes/: genres.json  movies.json
tests/functional/src/: conftest.py  pytest.ini  settings.py  test_genre.py
tests/functional/utils/: wait_for_es.py  wait_for_redis.py
(+112 files in other folders)
