[project]
name = "movies-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "click==8.1.7",
    "cryptography==44.0.0",
    "dnspython==2.7.0",
    "elastic-transport==8.15.1",
    "elasticsearch==8.13.2",
    "email-validator==2.2.0",
    "fastapi==0.115.0",
    "fastapi-cli==0.0.5",
    "frozenlist==1.5.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "idna==3.10",
    "jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "orjson==3.10.11",
    "packaging==24.2",
    "propcache==0.2.0",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.6.1",
    "pygments==2.18.0",
    "pyjwt==2.10.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-multipart==0.0.17",
    "pyyaml==6.0.2",
    "redis==5.0.4",
    "rich==13.9.4",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.37.2",
    "typer==0.13.0",
    "typing-extensions==4.12.2",
    "ujson==5.10.0",
    "urllib3==2.2.3",
    "uvicorn==0.32.0",
    "uvloop==0.21.0",
    "watchfiles==0.24.0",
    "websockets==14.0",
    "yarl==1.17.1",
]
